# spike_db

./: Cargo.toml  brain_config.toml  virtual_broken_project.rs
examples/: thought_stream.rs
src/: agent.rs  config.rs  database_manager.rs  lib.rs  main.rs  memory.rs  models.rs  network.rs  tokenizer.rs
src/kernel/: chunking.rs  event_queue.rs  evolution.rs  generator.rs  mod.rs
tests/: autonomous_agent_test.rs  complex_brain_test.rs  core_unit_tests.rs  deterministic_debug_test.rs  speed_benchmark_test.rs
tests/sequences/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt
