[package]
name = "spikedb"
version = "0.1.0"
edition = "2021"

[dependencies]
#sled = { version = "1.0.0-alpha.124", default-features = false, features = [] } 
sled = { git = "https://github.com/orneryd/sled", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
bincode-next = { version = "2.1.0", features = ["derive"] }
byteorder = "1.5.0"
